--- a/final.ipynb
+++ b/final.ipynb
@@ -17,6 +17,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29a8c73b",
+   "metadata": {},
+   "source": [
+    "# pregunta de final  \n",
+    "\n",
+    "\n",
+    "Modifica el código para que se considere un tercer producto que se desplace a otro contenedor, el cual corresponde a un producto que se puede corregirlo posteriormente\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "16a378da",
@@ -52,6 +64,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7318b97",
+   "metadata": {},
+   "source": [
+    "ahora estoy agregando uno que es  \n",
+    "0 -> bueno  \n",
+    "1 -> reparable  \n",
+    "2 -> malo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2fcaf55f",
@@ -60,27 +83,87 @@
    "source": [
     "class CintaTransportadoraEnv:\n",
     "\n",
-    "    def __init__(self, prob_malo=0.3, semilla=None):\n",
+    "#agregaremoos otro para el producto que se pude reparar , con una probabilidad del 20%s\n",
+    "    def __init__(self, prob_malo=0.3,prob_reparable=0.2, semilla=None):\n",
     "        self.prob_malo = prob_malo\n",
+    "        self.prob_reparable= prob_reparable\n",
     "        self.rng = random.Random(semilla)\n",
     "        self.producto_actual = None\n",
     "\n",
     "    def reiniciar(self):\n",
     "        \n",
-    "        self.producto_actual = 1 if self.rng.random() < self.prob_malo else 0\n",
+    "        rando= self.rng.random()\n",
+    "        \n",
+    "        #vemos la probabilidad de que sea bueno\n",
+    "        \n",
+    "        prob_bueno= 1.0 - self.prob_reparable - self.prob_malo\n",
+    "        \n",
+    "        if rando < prob_bueno:\n",
+    "            \n",
+    "            self.producto_actual = 0 \n",
+    "        elif rando < prob_bueno + self.prob_reparable:\n",
+    "            \n",
+    "            self.producto_actual = 1 \n",
+    "        else:\n",
+    "            self.producto_actual = 2  \n",
+    "        \n",
     "        return self.producto_actual\n",
+    "        \n",
+    "        #self.producto_actual = 1 if self.rng.random() < self.prob_malo else 0\n",
+    "        #return self.producto_actual\n",
     "\n",
     "    def paso(self, accion):\n",
     "        \n",
+    "        \n",
+    "        \n",
+    "        #0  dejar pasar\n",
+    "        #1  enviar a reparación\n",
+    "        #2  desechar\n",
     "     \n",
     "   \n",
     "        prod = self.producto_actual\n",
-    "        if accion == 1:  # retirar\n",
-    "            recompensa = 10.0 if prod == 1 else -5.0\n",
-    "        else:            # dejar pasar\n",
-    "            recompensa = 5.0 if prod == 0 else -10.0\n",
+    "        \n",
+    "        if accion == 0:  \n",
+    "            if prod == 0:   \n",
+    "                recompensa = 5\n",
+    "            elif prod == 1:  \n",
+    "                recompensa = -8\n",
+    "            else:            \n",
+    "                recompensa = -15\n",
+    "                \n",
+    "        elif accion == 1:  \n",
+    "            if prod == 0:    \n",
+    "                recompensa = -3\n",
+    "            elif prod == 1:  \n",
+    "                recompensa = 8\n",
+    "            else:            \n",
+    "                recompensa = -5\n",
+    "                \n",
+    "        else:  \n",
+    "            if prod == 0:   \n",
+    "                recompensa = -5\n",
+    "            elif prod == 1:  \n",
+    "                recompensa = -2\n",
+    "            else:            \n",
+    "                recompensa = 10\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        #if accion == 1:  # retirar\n",
+    "        #    recompensa = 10.0 if prod == 1 else -5.0\n",
+    "        #else:            # dejar pasar\n",
+    "        #    recompensa = 5.0 if prod == 0 else -10.0\n",
     "\n",
-    "        self.producto_actual = 1 if self.rng.random() < self.prob_malo else 0\n",
+    "        #self.producto_actual = 1 if self.rng.random() < self.prob_malo else 0\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        #reiniciamos todo y generamos el producto siguiente\n",
+    "        self.producto_actual = self.reiniciar()\n",
     "        terminado = False\n",
     "        info = {\"producto\": prod}\n",
     "        return self.producto_actual, recompensa, terminado, info\n"
@@ -108,10 +191,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def entrenamiento(episodios, alpha, gamma,epsilon, decay_epsilon, min_epsilon,prob_malo, semilla, guardar_ruta):\n",
-    "    env = CintaTransportadoraEnv(prob_malo=prob_malo,semilla=semilla)\n",
-    "    n_estados=2\n",
-    "    n_acciones=2\n",
+    "def entrenamiento(episodios, alpha, gamma,epsilon, decay_epsilon, min_epsilon,prob_reparable ,prob_malo, semilla, guardar_ruta):\n",
+    "    env = CintaTransportadoraEnv(prob_reparable=prob_reparable,prob_malo=prob_malo,semilla=semilla)\n",
+    "   #ahora tendremos 3 acciones y 3 estados\n",
+    "    n_estados=3\n",
+    "    n_acciones=3\n",
     "    \n",
     "    #iniciamos en ceros\n",
     "    Q = np.zeros((n_estados,n_acciones),dtype=np.float64)\n",
@@ -122,7 +206,7 @@
     "    for ep in range (episodios):\n",
     "        estado = env.reiniciar()\n",
     "        \n",
-    "        #aqui iniciamos la politica epsilon grady\n",
+    "        #aqui iniciamos la politica epsilon grady (e-grady)\n",
     "        if np.random.rand() < eps:\n",
     "            accion = np.random.randint(n_acciones)\n",
     "        else:\n",
@@ -162,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d78a8f10",
    "metadata": {},
    "outputs": [
@@ -170,22 +254,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episodio 2000/20000 | recompensa_promedio_ult_2000: 4.21 | eps: 0.2681\n",
-      "Episodio 4000/20000 | recompensa_promedio_ult_2000: 4.58 | eps: 0.1797\n",
-      "Episodio 6000/20000 | recompensa_promedio_ult_2000: 5.19 | eps: 0.1205\n",
-      "Episodio 8000/20000 | recompensa_promedio_ult_2000: 5.69 | eps: 0.0807\n",
-      "Episodio 10000/20000 | recompensa_promedio_ult_2000: 5.95 | eps: 0.0541\n",
-      "Episodio 12000/20000 | recompensa_promedio_ult_2000: 6.12 | eps: 0.0363\n",
-      "Episodio 14000/20000 | recompensa_promedio_ult_2000: 6.16 | eps: 0.0243\n",
-      "Episodio 16000/20000 | recompensa_promedio_ult_2000: 6.33 | eps: 0.0163\n",
-      "Episodio 18000/20000 | recompensa_promedio_ult_2000: 6.38 | eps: 0.0109\n",
-      "Episodio 20000/20000 | recompensa_promedio_ult_2000: 6.44 | eps: 0.0100\n",
+      "Episodio 2000/20000 | recompensa_promedio_ult_2000: 6.38 | eps: 0.0670\n",
+      "Episodio 4000/20000 | recompensa_promedio_ult_2000: 6.54 | eps: 0.0449\n",
+      "Episodio 6000/20000 | recompensa_promedio_ult_2000: 6.65 | eps: 0.0301\n",
+      "Episodio 8000/20000 | recompensa_promedio_ult_2000: 6.75 | eps: 0.0202\n",
+      "Episodio 10000/20000 | recompensa_promedio_ult_2000: 6.91 | eps: 0.0135\n",
+      "Episodio 12000/20000 | recompensa_promedio_ult_2000: 7.01 | eps: 0.0100\n",
+      "Episodio 14000/20000 | recompensa_promedio_ult_2000: 7.05 | eps: 0.0100\n",
+      "Episodio 16000/20000 | recompensa_promedio_ult_2000: 7.00 | eps: 0.0100\n",
+      "Episodio 18000/20000 | recompensa_promedio_ult_2000: 7.00 | eps: 0.0100\n",
+      "Episodio 20000/20000 | recompensa_promedio_ult_2000: 7.03 | eps: 0.0100\n",
       "Entrenamiento finalizado. Q-tabla guardada en: q_tabla.npy\n"
      ]
     }
    ],
    "source": [
-    "Q, recompensas = entrenamiento(episodios=20000, alpha=0.2, gamma=0.99,epsilon=0.4, decay_epsilon=0.9998, min_epsilon=0.01,prob_malo=0.3, semilla=123, guardar_ruta='q_tabla.npy')\n"
+    "Q, recompensas = entrenamiento(episodios=20000, alpha=0.2, gamma=0.99,epsilon=0.1, decay_epsilon=0.9998, min_epsilon=0.01,prob_reparable=0.2,prob_malo=0.3, semilla=123, guardar_ruta='q_tabla.npy')\n"
    ]
   },
   {
@@ -201,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "536a829d",
+   "id": "95c4b1f0",
    "metadata": {},
    "outputs": [
     {
@@ -224,30 +308,46 @@
    "source": [
     "import pygame\n",
     "\n",
-    "def simular_pygame(q_tabla_ruta='q_tabla.npy', prob_malo=0.3):\n",
+    "def simular_pygame(q_tabla_ruta='q_tabla.npy', prob_bueno=0.5, prob_reparable=0.2, prob_malo=0.3):\n",
+    "\n",
     "    if not os.path.exists(q_tabla_ruta):\n",
     "        print(f\"Q-tabla no encontrada en {q_tabla_ruta}. Entrena primero.\")\n",
     "        return\n",
+    "    \n",
     "    Q = np.load(q_tabla_ruta)\n",
     "\n",
     "    pygame.init()\n",
     "    ANCHO, ALTO = 640, 240\n",
     "    pantalla = pygame.display.set_mode((ANCHO, ALTO))\n",
-    "    pygame.display.set_caption('Cinta Transportadora - Simulación Q-Learning')\n",
+    "    pygame.display.set_caption('Cinta Transportadora - 3 Estados / 3 Acciones')\n",
     "    reloj = pygame.time.Clock()\n",
     "    FPS = 60\n",
     "\n",
+    "   \n",
     "    BLANCO = (255,255,255)\n",
     "    CINTA = (120,120,120)\n",
     "    BUENO = (50,180,50)\n",
+    "    REPARABLE = (255, 200, 50)\n",
     "    MALO = (200,60,60)\n",
     "    RETIRADOR = (70,130,180)\n",
+    "    REPARADOR = (100, 150, 255)\n",
     "\n",
-    "    x_producto = 40\n",
+    "    \n",
+    "    x_retirador = ANCHO - 200\n",
+    "  \n",
+    "    x_reparador = ANCHO - 100\n",
+    "\n",
+    "   \n",
+    "    x_producto = 60\n",
     "    y_producto = ALTO//2\n",
     "    velocidad = 2\n",
     "    rng = random.Random(123)\n",
-    "    estado_producto = 1 if rng.random() < prob_malo else 0\n",
+    "\n",
+    "    \n",
+    "    def nuevo_estado():\n",
+    "        return np.random.choice([0,1,2], p=[prob_bueno, prob_reparable, prob_malo])\n",
+    "\n",
+    "    estado_producto = nuevo_estado()\n",
     "\n",
     "    corriendo = True\n",
     "    while corriendo:\n",
@@ -257,30 +357,59 @@
     "\n",
     "        pantalla.fill(BLANCO)\n",
     "        pygame.draw.rect(pantalla, CINTA, (0, ALTO//2 - 20, ANCHO, 40))\n",
+    "\n",
     "        estado = estado_producto\n",
     "        accion = int(np.argmax(Q[estado]))\n",
-    "        x_retirador = ANCHO - 200\n",
+    "\n",
+    "        \n",
     "        if accion == 1:\n",
     "            pygame.draw.rect(pantalla, RETIRADOR, (x_retirador, ALTO//2 - 60, 40, 120))\n",
     "        else:\n",
     "            pygame.draw.rect(pantalla, (180,180,180), (x_retirador, ALTO//2 - 60, 40, 120))\n",
     "\n",
-    "        color = BUENO if estado_producto == 0 else MALO\n",
+    "      \n",
+    "      #si la accion es 2 a reparar\n",
+    "        if accion == 2:\n",
+    "            pygame.draw.rect(pantalla, REPARADOR, (x_reparador, ALTO//2 - 60, 40, 120))\n",
+    "        else:\n",
+    "            pygame.draw.rect(pantalla, (180,180,180), (x_reparador, ALTO//2 - 60, 40, 120))\n",
+    "\n",
+    "      \n",
+    "        if estado_producto == 0:\n",
+    "            color = BUENO\n",
+    "        elif estado_producto == 1:\n",
+    "            color = REPARABLE\n",
+    "        else:\n",
+    "            color = MALO\n",
+    "\n",
     "        pygame.draw.circle(pantalla, color, (int(x_producto), y_producto), 16)\n",
+    "\n",
+    "       \n",
     "        x_producto += velocidad\n",
+    "\n",
+    "       \n",
     "        if x_producto >= x_retirador + 10:\n",
-    "            if accion == 1:\n",
+    "            if accion == 1:   \n",
     "                y_producto -= 4\n",
+    "            elif accion == 2 and x_producto >= x_reparador:\n",
+    "                y_producto += 4   \n",
     "            else:\n",
-    "                y_producto = ALTO//2\n",
-    "        if x_producto > ANCHO + 50 or y_producto < -50:\n",
+    "                y_producto = ALTO // 2\n",
+    "\n",
+    "       \n",
+    "        if x_producto > ANCHO + 50 or y_producto < -50 or y_producto > ALTO + 50:\n",
     "            x_producto = 40\n",
     "            y_producto = ALTO//2\n",
-    "            estado_producto = 1 if rng.random() < prob_malo else 0\n",
+    "            estado_producto = nuevo_estado()\n",
     "\n",
+    "        \n",
     "        fuente = pygame.font.SysFont(None, 20)\n",
-    "        texto = fuente.render('Política Q-table: acción=argmax(Q[estado])  |  acción 0=dejar 1=retirar', True, (0,0,0))\n",
+    "        texto = fuente.render(\n",
+    "            'Acciones: 0=dejar   1=retirar   2=reparar', \n",
+    "            True, (0,0,0)\n",
+    "        )\n",
     "        pantalla.blit(texto, (10,10))\n",
+    "\n",
     "        pygame.display.flip()\n",
     "        reloj.tick(FPS)\n",
     "\n",
@@ -299,11 +428,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b258020d",
+   "id": "895298cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "simular_pygame('q_tabla.npy')\n"
+    "simular_pygame('q_tabla.npy')"
    ]
   }
  ],
