--- a/final.ipynb
+++ b/final.ipynb
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "100118c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def entrenamiento(episodios, alpha, gamma,epsilon, decay_epsilon, min_epsilon,prob_reparable ,prob_malo, semilla, guardar_ruta):\n",
     "    env = CintaTransportadoraEnv(prob_reparable=prob_reparable,prob_malo=prob_malo,semilla=semilla)\n",
-    "   #ahora tendremos 3 acciones y 3 estados\n",
+    "   #ahora tendremos 3 acciones y 3 estados eso es lo qye cambie\n",
     "    n_estados=3\n",
     "    n_acciones=3\n",
     "    \n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d78a8f10",
    "metadata": {},
    "outputs": [
@@ -269,6 +269,7 @@
     }
    ],
    "source": [
+    "#aumente lo que es el reparable para que ninicie el entrenmeinto con los estaodos\n",
     "Q, recompensas = entrenamiento(episodios=20000, alpha=0.2, gamma=0.99,epsilon=0.1, decay_epsilon=0.9998, min_epsilon=0.01,prob_reparable=0.2,prob_malo=0.3, semilla=123, guardar_ruta='q_tabla.npy')\n"
    ]
   },
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "95c4b1f0",
    "metadata": {},
    "outputs": [
@@ -308,6 +309,12 @@
    "source": [
     "import pygame\n",
     "\n",
+    "\n",
+    "#lo que hice aqui es crear otro tipo de brazo mas para poder hacer que el producto que esta para reparacion vayya a otra parte \n",
+    "#como se ve tuve que modificar la mayoria de la silmulacion aumentar prob_bueno=0.5, prob_reparable=0.2, prob_malo=0.3\n",
+    "\n",
+    "\n",
+    "#como tabien agregue los colores para el reparable\n",
     "def simular_pygame(q_tabla_ruta='q_tabla.npy', prob_bueno=0.5, prob_reparable=0.2, prob_malo=0.3):\n",
     "\n",
     "    if not os.path.exists(q_tabla_ruta):\n",
